# cwnu_timetable

./: .gitignore  BUILD.md  LICENSE  README.md  build_android_split_abi.ps1  clean.ps1  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: build.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/config/: class_period_time_ranges.dart  color_palette.dart  course_utils.dart  error_handler.dart  page_animations.dart
lib/features/timetable/presentation/widgets/: online_courses_sheet.dart  timetable_grid.dart
lib/models/: auth_session.dart  course_record.dart
lib/pages/: app_bootstrap_page.dart  grade_page.dart  home_dock_page.dart  licenses_page.dart  login_page.dart  settings_page.dart  settings_tab_page.dart  timetable_page.dart  today_page.dart  warning_page.dart  welcome_page.dart
lib/providers/: app_providers.dart
lib/services/: app_update_service.dart  grade_service.dart  session_store.dart  timetable_api.dart  update_helper.dart
lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/widgets/: course_detail_dialog.dart  week_picker_dialog.dart
native/: Cargo.toml
native/examples/: cli_test.rs
native/src/: api.rs  constants.rs  error.rs  frb_generated.rs  grade.rs  jwxt.rs  lib.rs  sso.rs  timetable.rs  utils.rs
test/: color_palette_test.dart  course_record_test.dart  course_utils_test.dart  error_handler_test.dart  grade_service_test.dart  widget_test.dart
(+16 files in other folders)
