[package]
name = "get_timetable"
version = "0.1.0"
edition = "2021"

[lib]
name = "get_timetable"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[example]]
name = "cli_test"
path = "examples/cli_test.rs"

[dependencies]
reqwest  = { version = "0.12", default-features = false, features = ["blocking", "cookies", "json", "rustls-tls"] }
scraper  = "0.22"
aes      = "0.8"
cbc      = { version = "0.1", features = ["alloc"] }
base64   = "0.22"
sha1     = "0.10"
rand     = "0.8"
serde    = { version = "1", features = ["derive"] }
serde_json = "1"
url      = "2"
regex    = "1"
thiserror = "2"
anyhow   = "1"
tokio    = { version = "1", features = ["rt-multi-thread"] }
flutter_rust_bridge = "=2.11.1"
